--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </div>
               <li class="li1">Content: Something Wrapped by Air Vinyl</li>
               <li class="li">Size: 50.5 x 38 cm</li>
-              <li class="li">Year: </li>
+              <li class="li">Year: 2019 </li>
               <h2 class="h2">Description</h2>
               <div class="line2"></div>
               <div class="box3">
